--- a/index.html
+++ b/index.html
@@ -9,15 +9,15 @@
 </head>
 <body>
     <nav>
-        <a href=""><img src="pacote-d013/imagens/logo-home.jpg" alt="logo home"></a>
-        <a href=""><img src="pacote-d013/imagens/logo-youtube.jpg" alt="logo youtube"></a>
-        <a href=""><img src="pacote-d013/imagens/logo-github.jpg" alt="logo github"></a>
-        <a href=""><img src="pacote-d013/imagens/logo-instagram.jpg" alt="logo instagram"></a>
-        <a href=""><img src="pacote-d013/imagens/logo-twitter.jpg" alt="logo twitter"></a>
-        <a href=""><img src="pacote-d013/imagens/logo-facebook.jpg" alt="logo facebook"></a>
+        <a href="pacote-d013/imagens/tela-home1.jpg" target="tela"><img src="pacote-d013/imagens/logo-home.jpg" alt="logo home"></a>
+        <a href="pacote-d013/imagens/tela-youtube1.png" target="tela"><img src="pacote-d013/imagens/logo-youtube.jpg" alt="logo youtube"></a>
+        <a href="pacote-d013/imagens/tela-github1.jpg" target="tela"><img src="pacote-d013/imagens/logo-github.jpg" alt="logo github"></a>
+        <a href="pacote-d013/imagens/tela-instagram1.jpg" target="tela"><img src="pacote-d013/imagens/logo-instagram.jpg" alt="logo instagram"></a>
+        <a href="pacote-d013/imagens/tela-twitter1.jpg"target="tela"><img src="pacote-d013/imagens/logo-twitter.jpg" alt="logo twitter"></a>
+        <a href="pacote-d013/imagens/tela-facebook1.jpg" target="tela"><img src="pacote-d013/imagens/logo-facebook.jpg" alt="logo facebook"></a>
     </nav>
     <main>
-        <iframe class="tela" src="pacote-d013/imagens/tela-home1.jpg" frameborder="0" scrolling="no"></iframe>
+        <iframe name="tela" class="tela" src="pacote-d013/imagens/tela-home1.jpg" scrolling="yes"><a href="Acesse">Acesse</a></iframe>
     </main>
 </body>
 </html>
