Tornando o site mais dinâmico
-Aprendi alguns conceitos de media query e decidi aplicá-los nesse projeto para treinar e para tornar o projeto mais dinâmico;

Melhorei a forma de como as imagens aparecem no telefone.

--- a/index.html
+++ b/index.html
@@ -5,16 +5,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Projeto Redes Sociais</title>
     <link rel="shortcut icon" href="pacote-d013/favicon.ico" type="image/x-icon">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style.css" media="all">
+    <link rel="stylesheet" href="paisagem.css" media="screen and (orientation: portrait)">
 </head>
 <body>
     <nav>
-        <a href="pacote-d013/imagens/tela-home1.jpg" target="tela"><img src="pacote-d013/imagens/logo-home.jpg" alt="logo home"></a>
-        <a href="pacote-d013/imagens/tela-youtube1.png" target="tela"><img src="pacote-d013/imagens/logo-youtube.jpg" alt="logo youtube"></a>
-        <a href="pacote-d013/imagens/tela-github1.jpg" target="tela"><img src="pacote-d013/imagens/logo-github.jpg" alt="logo github"></a>
-        <a href="pacote-d013/imagens/tela-instagram1.jpg" target="tela"><img src="pacote-d013/imagens/logo-instagram.jpg" alt="logo instagram"></a>
-        <a href="pacote-d013/imagens/tela-twitter1.jpg"target="tela"><img src="pacote-d013/imagens/logo-twitter.jpg" alt="logo twitter"></a>
-        <a href="pacote-d013/imagens/tela-facebook1.jpg" target="tela"><img src="pacote-d013/imagens/logo-facebook.jpg" alt="logo facebook"></a>
+        <a href="home.html" target="tela"><img src="pacote-d013/imagens/logo-home.jpg" alt="logo home"></a>
+        <a href="youtube.html" target="tela"><img src="pacote-d013/imagens/logo-youtube.jpg" alt="logo youtube"></a>
+        <a href="github.html" target="tela"><img src="pacote-d013/imagens/logo-github.jpg" alt="logo github"></a>
+        <a href="instagram.html" target="tela"><img src="pacote-d013/imagens/logo-instagram.jpg" alt="logo instagram"></a>
+        <a href="twitter.html"target="tela"><img src="pacote-d013/imagens/logo-twitter.jpg" alt="logo twitter"></a>
+        <a href="facebook.html" target="tela"><img src="pacote-d013/imagens/logo-facebook.jpg" alt="logo facebook"></a>
     </nav>
     <main>
         <iframe name="tela" class="tela" src="pacote-d013/imagens/tela-home1.jpg" scrolling="yes"><a href="Acesse">Acesse</a></iframe>
