Tentando corrigir alguns problemas

--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Projeto Redes Sociais</title>
     <link rel="shortcut icon" href="pacote-d013/favicon.ico" type="image/x-icon">
-    <link rel="stylesheet" href="style.css" media="all">
-    <link rel="stylesheet" href="paisagem.css" media="screen and (orientation: portrait)">
+    <link rel="stylesheet" href="estilos/style.css" media="all">   
+    <link rel="stylesheet" href="estilos/paisagem.css" media="screen and (orientation: portrait)">
 </head>
 <body>
     <nav>
@@ -15,7 +15,7 @@
         <a href="github.html" target="tela"><img src="pacote-d013/imagens/logo-github.jpg" alt="logo github"></a>
         <a href="instagram.html" target="tela"><img src="pacote-d013/imagens/logo-instagram.jpg" alt="logo instagram"></a>
         <a href="twitter.html"target="tela"><img src="pacote-d013/imagens/logo-twitter.jpg" alt="logo twitter"></a>
-        <a href="facebook.html" target="tela"><img src="pacote-d013/imagens/logo-facebook.jpg" alt="logo facebook"></a>
+        <a href="facebook.html" target="tela"><img src="./pacote-d013/imagens/logo-facebook.jpg" alt="logo facebook"></a>
     </nav>
     <main>
         <iframe name="tela" class="tela" src="pacote-d013/imagens/tela-home1.jpg" scrolling="yes"><a href="Acesse">Acesse</a></iframe>
