--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Projeto Redes Sociais</title>
     <link rel="shortcut icon" href="pacote-d013/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="estilos/style.css" media="all">   
-    <link rel="stylesheet" href="estilos/paisagem.css" media="screen and (orientation: portrait)">
+    <link rel="stylesheet" href="estilos/retrato.css" media="screen and (orientation:portrait)">
 </head>
 <body>
     <nav>
